--- a/_site.yml
+++ b/_site.yml
@@ -9,10 +9,12 @@ navbar:
       href: https://aakriti.shinyapps.io/ny_shiny/
     - text: "Find Your Risk!"
       href: https://jiyueqin.shinyapps.io/framingham/
+    - icon: fa-heartbeat fa-lg
+      href: https://heartbeathealth.com/
     - icon: fa-github fa-lg
       href: https://github.com/alc2279/p8105_final_project
     - icon: fa-envelope fa-lg
       href: mailto:<alc2279@cumc.columbia.edu>
 output:
   html_document:
-    theme: flatly
+    theme: journal
