--- a/_site.yml
+++ b/_site.yml
@@ -10,7 +10,7 @@ navbar:
     - text: "Find Your Risk!"
       href: https://jiyueqin.shinyapps.io/framingham/
     - text: "Project Report"
-      href: "final_project_report.html"
+      href: "report_link.html"
     - icon: fa-heartbeat fa-lg
       href: https://heartbeathealth.com/
     - icon: fa-github fa-lg
